# rs_logger

./: README.md  meson.build
python/: Pipfile  read-ros-bag.ipynb
src/: rs-record-trajectory.cpp
